// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`model-generator generates add/remove junction methods for M:N relations 1`] = `
"/**
 * Post model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildFindOneDocument, buildCreateDocument, buildUpdateByPkDocument, buildDeleteByPkDocument, buildDeleteByCompositePkDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, StrictSelect } from "../select-types";
import type { Post, PostWithRelations, PostSelect, PostFilter, PostCondition, PostsOrderBy, CreatePostInput, UpdatePostInput, PostPatch } from "../input-types";
import { connectionFieldsMap } from "../input-types";
import type { PostTag, CreatePostTagInput } from "../input-types";
export class PostModel {
  constructor(private client: OrmClient) {}
  findMany<S extends PostSelect>(args: FindManyArgs<S, PostFilter, PostCondition, PostsOrderBy> & {
    select: S;
  } & StrictSelect<S, PostSelect>): QueryBuilder<{
    posts: ConnectionResult<InferSelectResult<PostWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("Post", "posts", args.select, {
      where: args?.where,
      condition: args?.condition,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "PostFilter", "PostsOrderBy", connectionFieldsMap, "PostCondition");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Post",
      fieldName: "posts",
      document,
      variables
    });
  }
  findFirst<S extends PostSelect>(args: FindFirstArgs<S, PostFilter, PostCondition> & {
    select: S;
  } & StrictSelect<S, PostSelect>): QueryBuilder<{
    posts: {
      nodes: InferSelectResult<PostWithRelations, S>[];
    };
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("Post", "posts", args.select, {
      where: args?.where,
      condition: args?.condition
    }, "PostFilter", connectionFieldsMap, "PostCondition");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Post",
      fieldName: "posts",
      document,
      variables
    });
  }
  findOne<S extends PostSelect>(args: {
    id: string;
    select: S;
  } & StrictSelect<S, PostSelect>): QueryBuilder<{
    post: InferSelectResult<PostWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindOneDocument("Post", "post", args.id, args.select, "id", "UUID!", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Post",
      fieldName: "post",
      document,
      variables
    });
  }
  create<S extends PostSelect>(args: CreateArgs<S, CreatePostInput["post"]> & {
    select: S;
  } & StrictSelect<S, PostSelect>): QueryBuilder<{
    createPost: {
      post: InferSelectResult<PostWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("Post", "createPost", "post", args.select, args.data, "CreatePostInput", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Post",
      fieldName: "createPost",
      document,
      variables
    });
  }
  update<S extends PostSelect>(args: UpdateArgs<S, {
    id: string;
  }, PostPatch> & {
    select: S;
  } & StrictSelect<S, PostSelect>): QueryBuilder<{
    updatePost: {
      post: InferSelectResult<PostWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildUpdateByPkDocument("Post", "updatePost", "post", args.select, args.where.id, args.data, "UpdatePostInput", "id", "postPatch", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Post",
      fieldName: "updatePost",
      document,
      variables
    });
  }
  delete<S extends PostSelect>(args: DeleteArgs<{
    id: string;
  }, S> & {
    select: S;
  } & StrictSelect<S, PostSelect>): QueryBuilder<{
    deletePost: {
      post: InferSelectResult<PostWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildDeleteByPkDocument("Post", "deletePost", "post", args.where.id, "DeletePostInput", "id", args.select, connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Post",
      fieldName: "deletePost",
      document,
      variables
    });
  }
  addTag(postId: string, tagId: string): QueryBuilder<{
    createPostTag: {
      postTag: PostTag;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("PostTag", "createPostTag", "postTag", {
      postId: true,
      tagId: true
    }, {
      postId,
      tagId
    }, "CreatePostTagInput", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "PostTag",
      fieldName: "createPostTag",
      document,
      variables
    });
  }
  removeTag(postId: string, tagId: string): QueryBuilder<{
    deletePostTag: {
      postTag: PostTag;
    };
  }> {
    const {
      document,
      variables
    } = buildDeleteByCompositePkDocument("PostTag", "deletePostTag", "postTag", {
      postId,
      tagId
    }, "DeletePostTagInput", {
      postId: true,
      tagId: true
    }, connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "PostTag",
      fieldName: "deletePostTag",
      document,
      variables
    });
  }
}"
`;

exports[`model-generator generates model with all CRUD methods 1`] = `
"/**
 * User model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildFindOneDocument, buildCreateDocument, buildUpdateByPkDocument, buildDeleteByPkDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, StrictSelect } from "../select-types";
import type { User, UserWithRelations, UserSelect, UserFilter, UserCondition, UsersOrderBy, CreateUserInput, UpdateUserInput, UserPatch } from "../input-types";
import { connectionFieldsMap } from "../input-types";
export class UserModel {
  constructor(private client: OrmClient) {}
  findMany<S extends UserSelect>(args: FindManyArgs<S, UserFilter, UserCondition, UsersOrderBy> & {
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    users: ConnectionResult<InferSelectResult<UserWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("User", "users", args.select, {
      where: args?.where,
      condition: args?.condition,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "UserFilter", "UsersOrderBy", connectionFieldsMap, "UserCondition");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "User",
      fieldName: "users",
      document,
      variables
    });
  }
  findFirst<S extends UserSelect>(args: FindFirstArgs<S, UserFilter, UserCondition> & {
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    users: {
      nodes: InferSelectResult<UserWithRelations, S>[];
    };
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("User", "users", args.select, {
      where: args?.where,
      condition: args?.condition
    }, "UserFilter", connectionFieldsMap, "UserCondition");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "User",
      fieldName: "users",
      document,
      variables
    });
  }
  findOne<S extends UserSelect>(args: {
    id: string;
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    user: InferSelectResult<UserWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindOneDocument("User", "user", args.id, args.select, "id", "UUID!", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "User",
      fieldName: "user",
      document,
      variables
    });
  }
  create<S extends UserSelect>(args: CreateArgs<S, CreateUserInput["user"]> & {
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    createUser: {
      user: InferSelectResult<UserWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("User", "createUser", "user", args.select, args.data, "CreateUserInput", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "createUser",
      document,
      variables
    });
  }
  update<S extends UserSelect>(args: UpdateArgs<S, {
    id: string;
  }, UserPatch> & {
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    updateUser: {
      user: InferSelectResult<UserWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildUpdateByPkDocument("User", "updateUser", "user", args.select, args.where.id, args.data, "UpdateUserInput", "id", "userPatch", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "updateUser",
      document,
      variables
    });
  }
  delete<S extends UserSelect>(args: DeleteArgs<{
    id: string;
  }, S> & {
    select: S;
  } & StrictSelect<S, UserSelect>): QueryBuilder<{
    deleteUser: {
      user: InferSelectResult<UserWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildDeleteByPkDocument("User", "deleteUser", "user", args.where.id, "DeleteUserInput", "id", args.select, connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "deleteUser",
      document,
      variables
    });
  }
}"
`;

exports[`model-generator generates model without update/delete when not available 1`] = `
"/**
 * AuditLog model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildFindOneDocument, buildCreateDocument, buildUpdateByPkDocument, buildDeleteByPkDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, StrictSelect } from "../select-types";
import type { AuditLog, AuditLogWithRelations, AuditLogSelect, AuditLogFilter, AuditLogCondition, AuditLogsOrderBy, CreateAuditLogInput, UpdateAuditLogInput, AuditLogPatch } from "../input-types";
import { connectionFieldsMap } from "../input-types";
export class AuditLogModel {
  constructor(private client: OrmClient) {}
  findMany<S extends AuditLogSelect>(args: FindManyArgs<S, AuditLogFilter, AuditLogCondition, AuditLogsOrderBy> & {
    select: S;
  } & StrictSelect<S, AuditLogSelect>): QueryBuilder<{
    auditLogs: ConnectionResult<InferSelectResult<AuditLogWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("AuditLog", "auditLogs", args.select, {
      where: args?.where,
      condition: args?.condition,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "AuditLogFilter", "AuditLogsOrderBy", connectionFieldsMap, "AuditLogCondition");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "AuditLog",
      fieldName: "auditLogs",
      document,
      variables
    });
  }
  findFirst<S extends AuditLogSelect>(args: FindFirstArgs<S, AuditLogFilter, AuditLogCondition> & {
    select: S;
  } & StrictSelect<S, AuditLogSelect>): QueryBuilder<{
    auditLogs: {
      nodes: InferSelectResult<AuditLogWithRelations, S>[];
    };
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("AuditLog", "auditLogs", args.select, {
      where: args?.where,
      condition: args?.condition
    }, "AuditLogFilter", connectionFieldsMap, "AuditLogCondition");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "AuditLog",
      fieldName: "auditLogs",
      document,
      variables
    });
  }
  findOne<S extends AuditLogSelect>(args: {
    id: string;
    select: S;
  } & StrictSelect<S, AuditLogSelect>): QueryBuilder<{
    auditLog: InferSelectResult<AuditLogWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindOneDocument("AuditLog", "auditLog", args.id, args.select, "id", "UUID!", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "AuditLog",
      fieldName: "auditLog",
      document,
      variables
    });
  }
  create<S extends AuditLogSelect>(args: CreateArgs<S, CreateAuditLogInput["auditLog"]> & {
    select: S;
  } & StrictSelect<S, AuditLogSelect>): QueryBuilder<{
    createAuditLog: {
      auditLog: InferSelectResult<AuditLogWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("AuditLog", "createAuditLog", "auditLog", args.select, args.data, "CreateAuditLogInput", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "AuditLog",
      fieldName: "createAuditLog",
      document,
      variables
    });
  }
}"
`;

exports[`model-generator handles custom query/mutation names 1`] = `
"/**
 * Organization model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildFindOneDocument, buildCreateDocument, buildUpdateByPkDocument, buildDeleteByPkDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, StrictSelect } from "../select-types";
import type { Organization, OrganizationWithRelations, OrganizationSelect, OrganizationFilter, OrganizationCondition, OrganizationsOrderBy, CreateOrganizationInput, UpdateOrganizationInput, OrganizationPatch } from "../input-types";
import { connectionFieldsMap } from "../input-types";
export class OrganizationModel {
  constructor(private client: OrmClient) {}
  findMany<S extends OrganizationSelect>(args: FindManyArgs<S, OrganizationFilter, OrganizationCondition, OrganizationsOrderBy> & {
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    allOrganizations: ConnectionResult<InferSelectResult<OrganizationWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("Organization", "allOrganizations", args.select, {
      where: args?.where,
      condition: args?.condition,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "OrganizationFilter", "OrganizationsOrderBy", connectionFieldsMap, "OrganizationCondition");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Organization",
      fieldName: "allOrganizations",
      document,
      variables
    });
  }
  findFirst<S extends OrganizationSelect>(args: FindFirstArgs<S, OrganizationFilter, OrganizationCondition> & {
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    allOrganizations: {
      nodes: InferSelectResult<OrganizationWithRelations, S>[];
    };
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("Organization", "allOrganizations", args.select, {
      where: args?.where,
      condition: args?.condition
    }, "OrganizationFilter", connectionFieldsMap, "OrganizationCondition");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Organization",
      fieldName: "allOrganizations",
      document,
      variables
    });
  }
  findOne<S extends OrganizationSelect>(args: {
    id: string;
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    organizationById: InferSelectResult<OrganizationWithRelations, S> | null;
  }> {
    const {
      document,
      variables
    } = buildFindOneDocument("Organization", "organizationById", args.id, args.select, "id", "UUID!", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Organization",
      fieldName: "organizationById",
      document,
      variables
    });
  }
  create<S extends OrganizationSelect>(args: CreateArgs<S, CreateOrganizationInput["organization"]> & {
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    registerOrganization: {
      organization: InferSelectResult<OrganizationWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("Organization", "registerOrganization", "organization", args.select, args.data, "CreateOrganizationInput", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "registerOrganization",
      document,
      variables
    });
  }
  update<S extends OrganizationSelect>(args: UpdateArgs<S, {
    id: string;
  }, OrganizationPatch> & {
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    modifyOrganization: {
      organization: InferSelectResult<OrganizationWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildUpdateByPkDocument("Organization", "modifyOrganization", "organization", args.select, args.where.id, args.data, "UpdateOrganizationInput", "id", "organizationPatch", connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "modifyOrganization",
      document,
      variables
    });
  }
  delete<S extends OrganizationSelect>(args: DeleteArgs<{
    id: string;
  }, S> & {
    select: S;
  } & StrictSelect<S, OrganizationSelect>): QueryBuilder<{
    removeOrganization: {
      organization: InferSelectResult<OrganizationWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildDeleteByPkDocument("Organization", "removeOrganization", "organization", args.where.id, "DeleteOrganizationInput", "id", args.select, connectionFieldsMap);
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "removeOrganization",
      document,
      variables
    });
  }
}"
`;
